src/assets/styles/global.css
@font-face {
  font-family: 'IBM Plex Sans';
  src: url(../fonts/IBMPlexSans_Var-Roman.woff2), format('woff2-variations');
  font-weight: 100 900;
  font-style: normal;
  font-display: block;
}

@font-face {
  font-family: 'IBM Plex Sans';
  src: url(../fonts/IBMPlexSans_Var-Italic.woff2), format('woff2-variations');
  font-weight: 100 900;
  font-style: italic;
  font-display: block;
}

@font-face {
  font-family: 'Mona Sans';
  src: url(../fonts/MonaSansVF[wdth\,wght\,opsz\,ital].woff2), format('woff2-variations');
  font-weight: 200 900;
  font-stretch: 75% 125%;
  font-style: oblique 0deg 10deg;
  font-display: block;
}

:root {
  --plex-sans: 'IBM Plex Sans', sans-serif;
  --mona-sans: 'Mona Sans', serif;
  --central-ministry-colour: rgb(104, 160, 255);
  --ministry-of-food-colour: rgb(255, 220, 0);
  --ministry-of-foreign-affairs-colour: rgb(54, 83, 255);
  --ministry-of-health-colour: rgb(255, 0, 0);
  --ministry-of-finance-colour: rgb(0, 176, 0);
  --ministry-of-immigration-colour: rgb(195, 140, 0);
  --ministry-of-technology-colour: rgb(74, 255, 209);
  --ministry-of-defence-colour: rgb(165, 165, 165);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: var(--mona-sans);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--plex-sans);
  font-weight: 700;
}

input,
button {
  appearance: none;
  border: none;
  background-color: transparent;
  outline: none;
}

a {
  text-decoration: none;
}

.header {
  background-color: var(--theme, var(--central-ministry-colour));
  padding: 1rem 5rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: sticky;
  top: 0;
  z-index: 99999;
}

.logo-text {
  color: var(--theme-accent, white);
  font-size: 1.5rem;
  text-decoration: none;
}

.logo-text.bottom {
  margin-top: -0.2rem;
  font-weight: 400;
}

.hero {
  background-color: var(--theme, var(--central-ministry-colour));
  color: var(--theme-accent, white);
}

.hero-title {
  font-size: 4rem;
  margin-bottom: 1rem;
  scroll-margin-top: 10rem;
  line-height: 1.2;
}

.hero-text {
  font-size: 2rem;
}

.table-of-contents-title {
  font-family: var(--plex-sans);
  font-size: 4rem;
  font-weight: 700;
}

.table-of-contents-title::before {
  display: none;
}

.table-of-contents-container .section-divider {
  margin-bottom: 1rem;
  animation: none;
  transform: scaleX(1);
}

.toc-item-h2 {
  font-size: 1.5rem;
}

.toc-item-h3 {
  font-size: 1.25rem;
}

.toc-list, .toc-list ul {
  margin-left: 2rem;
}

.toc-list li {
  margin-bottom: 0.5rem;
}

.toc-list li a {
  color: black;
}

.toc-list li a:hover {
  color: var(--central-ministry-colour);
}

.heading, h2 {
  font-size: 4rem;
  position: relative;
  overflow: clip;
  display: inline-block;
  scroll-margin-top: 10rem;
}

.heading::before, h2::before {
  content: '';
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  background-color: white;
  animation: wipe-up ease-out both;
  animation-timeline: view();
  animation-range-start: cover 10%;
  animation-range-end: cover 50%;
}

@keyframes wipe-up {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(200%);
  }
}

.title, h3 {
  font-size: 2.5rem;
  scroll-margin-top: 10rem;
}

.section-divider, hr {
  min-width: 0;
  width: 100%;
  height: 10px;
  background-color: var(--theme, var(--central-ministry-colour));
  margin-bottom: 2rem;
  transform-origin: left;
  animation: wipe-right ease-in both;
  animation-timeline: view();
  animation-range-start: cover 0%;
  animation-range-end: cover 30%;
}

@keyframes wipe-right {
  0% {
    transform: scaleX(0);
  }
  100% {
    transform: scaleX(1);
  }
}

.return, .share {
  padding: 1rem 2rem;
  font-size: 2rem;
  font-family: var(--mona-sans);
  color: black;
  background-color: transparent;
  display: flex;
  max-width: fit-content;
  margin: 1rem auto 0 auto;
  box-shadow: inset 0 0 0 0px var(--theme, var(--central-ministry-colour));
  border: 16px solid var(--theme, var(--central-ministry-colour));
  transition:
    box-shadow 0.4s ease-in-out,
    color 0.4s ease-in-out;
  will-change: box-shadow, color;
}

.return:hover, .share:hover {
  box-shadow: inset 0 0 0 400px var(--theme, var(--central-ministry-colour));
  color: var(--theme-accent, white);
}

footer {
  margin-top: 4rem;
  padding: 2rem 5rem calc(3rem + 5px) 5rem;
  background-color: var(--theme, var(--central-ministry-colour));
  color: var(--theme-accent, white);
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  gap: 2rem;
  margin-bottom: -5px;
}

.footer-title {
  font-size: 2.5rem;
  position: relative;
  overflow: clip;
  display: inline-block;
}

.footer-title::before {
  content: '';
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  background-color: var(--theme, var(--central-ministry-colour));
  animation: wipe-up ease-out both;
  animation-timeline: view();
  animation-range-start: cover 5%;
  animation-range-end: cover 35%;
}

.footer-divider {
  width: 100%;
  height: 10px;
  background-color: var(--theme-accent, white);
  margin-bottom: 1rem;
  transform-origin: left;
  animation: wipe-right ease-in both;
  animation-timeline: view();
  animation-range-start: cover 0%;
  animation-range-end: cover 15%;
}

.footer-ministries.links {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-auto-rows: fit-content;
  row-gap: 0.5rem;
  column-gap: 1rem;
}

.footer-resources.links,
.footer-about.links {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

footer .link {
  color: var(--theme-accent, white);
  font-size: 1.2rem;
  position: relative;
  overflow: hidden;
  isolation: isolate;
}

footer .link::before {
  content: '';
  position: absolute;
  inset: 0;
  background-color: var(--theme-accent, white);
  width: 100%;
  height: 100%;
  transform-origin: left;
  z-index: -1;
  transform: translateX(-110%);
  transition: transform 0.2s ease-out;
}

footer .link:hover::before {
  transform: translateX(0%);
}

footer .link:hover {
  color: var(--theme-accent-alt, black);
}

.footer.link {
  text-decoration: underline;
}

.link:not(.footer.link) {
  text-decoration: underline;
  text-decoration-thickness: 2px;
}

.link:hover:not(.footer.link) {
  text-decoration: underline;
  text-decoration-skip-ink: none;
  text-decoration-thickness: 4px;
}

@keyframes wipe-up {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(200%);
  }
}

.search-mobile {
  display: none;
}

pagefind-searchbox, pagefind-modal-trigger, pagefind-modal {
  --pf-input-height: 3rem;   
  --pf-border-radius: 0; 
  --pf-font: var(--mona-sans);
  --pf-input-font-size: 2rem;
  --pf-border: white;
  --pf-border-focus: black;
  --pf-outline-focus: black;
  --pf-icon-search: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'/>");
}

/* Slide the text over */
pagefind-input::part(input),
pagefind-searchbox::part(input) {
  padding-inline-start: 0px;
}

.search-icon {
  height: 3rem;
  width: auto;
  cursor: pointer;
  filter: invert();
}

.search-icon:hover {
  border: 4px solid black;
}

.header-scrollable-area {
  padding-bottom: 1px;
}

@media (max-width: 600px) {
  .search-mobile {
    display: flex;
  }
  .search-desktop {
    display: none;
  }
  .hero-title {
    font-size: 2.5rem;
  }
  .hero-text {
    font-size: 1.5rem;
    margin-bottom: 2rem;
  }
  .heading, h2, .table-of-contents-title {
    font-size: 2rem;
  }
  .toc-item-h2 {
    font-size: 1.25rem;
  }
  .toc-item-h3 {
    font-size: 1rem;
  }
  .toc-list, .toc-list ul {
    margin-bottom: 0.25rem;
  }
  .title, h3 {
    font-size: 1.5rem;
  }
  .section-divider,
  hr {
    margin-bottom: 1rem;
    animation-range-start: cover 0%;
    animation-range-end: cover 20%;
  }
  footer {
    flex-direction: column;
    flex-wrap: nowrap;
    padding: 2rem 3rem 3rem 3rem;
  }
  .footer-divider {
    animation-range-start: cover 0%;
    animation-range-end: cover 10%;
  }
  footer .link {
    font-size: 1rem;
  }
  .return, .share {
    font-size: 1.5rem;
    text-align: center;
  }
}

